#40 Implemented play auto

--- a/30_sources/SRC_Zupfnoter/index_opal.html.erb
+++ b/30_sources/SRC_Zupfnoter/index_opal.html.erb
@@ -125,7 +125,7 @@
       },
 
       'tbPlay': function () {
-        uicontroller.$play_abc('selection_ff');
+        uicontroller.$play_abc('auto');
       },
 
       'tbRender': function () {
