#42 reworked handling of 'uicontroller', such that MS Edge also knows it. It seems also to be more appriate than using a global variable.
Nevertheless Zupfnoter still does not work on Edge.

--- a/30_sources/SRC_Zupfnoter/index_opal.html.erb
+++ b/30_sources/SRC_Zupfnoter/index_opal.html.erb
@@ -55,7 +55,7 @@
     return "Zupfnoter verlassen? echt jetzt ...?"
   }
 
-  function init_w2ui() {
+  function init_w2ui(uicontroller) {
 
     perspectives = {
       'tb_perspective:Alle': function () {
