--- a/30_sources/SRC_Zupfnoter/index_opal.html.erb
+++ b/30_sources/SRC_Zupfnoter/index_opal.html.erb
@@ -66,6 +66,7 @@
         w2ui['layout'].show('main', window.instant);
         w2ui['layout'].show('preview', window.instant);
         w2ui['layout'].sizeTo('preview', "50%");
+        $("#harpPreview svg").attr('height', 700).attr('width', '100%');
       },
       'tb_perspective:NotenEingabe': function () {
         w2ui['layout'].show('left', window.instant);
@@ -93,6 +94,7 @@
         w2ui['layout'].hide('main', window.instant);
         w2ui['layout'].show('preview', window.instant);
         w2ui['layout'].sizeTo('preview', "100%");
+        $("#harpPreview svg").attr('height', 1200).attr('width', '100%');
       },
       'tb_view:0': function () {
         uicontroller.$handle_command("view 0")
@@ -108,13 +110,13 @@
       },
 
       'tb_scale:groß': function () {
-        $("#harpPreview svg").attr('height', 1400);
+        $("#harpPreview svg").attr('height', 1400).attr('width', 2200);
       },
       'tb_scale:mittel': function () {
-        $("#harpPreview svg").attr('height', 700);
+        $("#harpPreview svg").attr('height', 700).attr('width', 1100);
       },
       'tb_scale:klein': function () {
-        $("#harpPreview svg").attr('height', 300);
+        $("#harpPreview svg").attr('height', 300).attr('width', 500);
       },
 
       'tbPrintA3': function () {
