--- a/30_sources/SRC_Zupfnoter/index_opal.html.erb
+++ b/30_sources/SRC_Zupfnoter/index_opal.html.erb
@@ -34,7 +34,7 @@
 
   <link rel="stylesheet" type="text/css" href="vendor/w2ui/dist/w2ui.min.css"/>
   <link rel="stylesheet" type="text/css" href="vendor/font-awesome/css/font-awesome.min.css"/>
-  <script type="text/javascript" src="vendor/w2ui/dist/w2ui.js"></script>
+  <script type="text/javascript" src="vendor/w2ui/dist/w2ui.min.js"></script>
 
   <style>
     .spinner {
