#58 Improve positioning of rests
horizontal position of Rest can now be configured.

--- a/30_sources/SRC_Zupfnoter/index_opal.html.erb
+++ b/30_sources/SRC_Zupfnoter/index_opal.html.erb
@@ -272,6 +272,7 @@
             {text: 'stringnames.full', tooltip: "specify full details for stringnams"},
             {text: 'repeatsigns.full', tooltip: "specify all details for repeat signs"},
             {text: ''},
+            {id: 'restpos_1.3', text: 'rests as V 1.3', tooltip: "configure positioning of rests\ncompatible to version 1.3"},
             {text: 'xx', tooltip: "inject the default configuration (for development use only)"},
           ]
         },
