--- a/30_sources/SRC_Zupfnoter/index_opal.html.erb
+++ b/30_sources/SRC_Zupfnoter/index_opal.html.erb
@@ -270,6 +270,7 @@
             {text: 'nonflowrest', tooltip: "specify if rests are shown outside of flowlines"},
             {text: 'startpos', tooltip: "specify the vertical start position of the notes"},
             {text: 'countnotes', tooltip: "specify which voices\n shwow countnotes\n and appeareance of the same"},
+            {text: 'barnumbers', tooltip: "specify which voices\n shwow bar numbers\n and appeareance of the same"},
             {text: 'layout', tooltip: "specify laoyut details \n(e.g. size of symbols)"},
             {text: 'stringnames', tooltip: "specify output of stringnames.\n Stringnames help to tune the instrument"},
             {text: ''},
@@ -281,6 +282,7 @@
             {text: ''},
             {text: 'stringnames.full', tooltip: "specify full details for stringnams"},
             {text: 'repeatsigns.full', tooltip: "specify all details for repeat signs"},
+            {text: 'barnumbers.full', tooltip: "specify all details for bar numbers"},
             {text: ''},
             {id: 'restpos_1.3', text: 'rests as V 1.3', tooltip: "configure positioning of rests\ncompatible to version 1.3"},
             {text: 'xx', tooltip: "inject the default configuration (for development use only)"},
