--- a/30_sources/SRC_Zupfnoter/index_opal.html.erb
+++ b/30_sources/SRC_Zupfnoter/index_opal.html.erb
@@ -289,6 +289,7 @@
             {text: ''},
             {text: 'produce', tooltip: "specify which extracts shall be saved as PDF"},
             {
+              id: 'annotations',
               text: 'annotation template',
               tooltip: "specify temmplate for\n note bound annotations"
             },
