simplified alert on unload. The Message can no longer be defined on chrome, so I simply return the message 'hugo'

--- a/30_sources/SRC_Zupfnoter/index_opal.html.erb
+++ b/30_sources/SRC_Zupfnoter/index_opal.html.erb
@@ -46,7 +46,7 @@
   <%= javascript_include_tag 'application' %>
 </head>
 
-<body style="height: 100%;" onbeforeunload="return check_unload()">
+<body style="height: 100%;" onbeforeunload="return 'hugo';">
 <div id="layout" style="height: 100%">
 </div>
 
