#45 breakthrough for the status line

--- a/30_sources/SRC_Zupfnoter/index_opal.html.erb
+++ b/30_sources/SRC_Zupfnoter/index_opal.html.erb
@@ -47,7 +47,9 @@
 </head>
 
 <body style="height: 100%;" onbeforeunload="return 'hugo';">
-<div id="layout" style="height: 100%">
+<div id="layout" style="height: calc(100% - 25px);">
+</div>
+<div id="statusbar-layout" style="height:25px">
 </div>
 
 <%= begin
