--- a/30_sources/SRC_Zupfnoter/public/index.scss
+++ b/30_sources/SRC_Zupfnoter/public/index.scss
@@ -260,3 +260,17 @@ rect.abcref {fill:grey;fill-opacity:0.01}
 rect.abcref:hover {fill-opacity:0.5}
 
 rect.highlight {fill: red;fill-opacity:0.2}
+
+
+.zn-nilfield {
+  border: 1px solid #b5b4b6 !important;
+  background-color: #b5b4b6 !important;
+}
+
+.zn-statusbar {
+  border: 1px solid #b5b4b6 !important;
+}
+
+#statusbar-layout  .w2ui-tb-caption {vertical-align: top;}
+#statusbar-layout  table {vertical-align: top;}
+#statusbar-layout  * {vertical-align: top;}
