--- a/30_sources/SRC_Zupfnoter/index_opal.html.erb
+++ b/30_sources/SRC_Zupfnoter/index_opal.html.erb
@@ -9,6 +9,7 @@
   <script src="vendor/jquery-3.0.0.min.js" type="application/javascript"></script>
   <script src="vendor/jquery-migrate-1.4.1.min.js" type="application/javascript"></script>
 
+  <script src="vendor/ajv.min.js" type="application/javascript" charset="utf-8"></script>
   <script src="vendor/ace/ace.js" type="application/javascript" charset="utf-8"></script>
   <script src="vendor/ace/ext-language_tools.js" type="application/javascript" charset="utf-8"></script>
 
