--- a/30_sources/SRC_Zupfnoter/public/index.css
+++ b/30_sources/SRC_Zupfnoter/public/index.css
@@ -217,3 +217,6 @@ rect.highlight {
 
 #statusbar-layout * {
   vertical-align: top; }
+
+#tunePreview text, #tunePreview path {
+  pointer-events: none; }
