#63 initial attempt to migrate to dropbox API v2
* tried to use a wrapper for ES6 promise implementation (from https://github.com/clearwater-rb/bowser/blob/service-worker/opal/bowser/service_worker/promise.rb)
* had to create a new dropbox application for testing since API v2 dos not support file type based permissions - how bad
* started with the login process and dls

--- a/30_sources/SRC_Zupfnoter/index_opal.html.erb
+++ b/30_sources/SRC_Zupfnoter/index_opal.html.erb
@@ -24,13 +24,13 @@
   <script src="vendor/jspdf.min.js" type="application/javascript"></script>
   <script src="vendor/filesaver.js" type="application/javascript"></script>
   <script src="vendor/jszip.min.js" type="application/javascript"></script>
-  <script src="vendor/dropbox.min.js" type="application/javascript"></script>
+  <script src="vendor/Dropbox-sdk.min.js" type="application/javascript"></script>
 
   <script src="vendor/abc2svg-1.js" type="application/javascript"></script>
   <script src="vendor/xml2abc-bw.js" type="application/javascript"></script>
 
 
-  <script type="text/javascript" src="https://www.dropbox.com/static/api/2/dropins.js" id="dropboxjs" data-app-key="us2s6tq6bubk6xh"></script>
+  <script type="text/javascript" src="https://www.dropbox.com/static/api/2/dropins.js" id="dropboxjs" data-app-key="zwydv2vbgp30e05"></script>
 
   <link rel="stylesheet" type="text/css" href="vendor/w2ui/dist/w2ui.min.css"/>
   <link rel="stylesheet" type="text/css" href="vendor/font-awesome/css/font-awesome.min.css"/>
