--- a/30_sources/SRC_Zupfnoter/index_opal.html.erb
+++ b/30_sources/SRC_Zupfnoter/index_opal.html.erb
@@ -1,40 +1,49 @@
 <!DOCTYPE html>
+<%=
+  def nc(name)
+    build = GITSHA rescue "dev"
+    %Q{#{name}?#{build}}
+  end
+
+  nil
+%>
+
 <html xmlns="http://www.w3.org/1999/xhtml" style="height: 100%">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <title>Zupfnoter</title>
   <link rel="shortcut icon" href="public/icons/favicon.png"/>
 
-  <script src="vendor/jquery-3.0.0.min.js" type="application/javascript"></script>
-  <script src="vendor/jquery-migrate-1.4.1.min.js" type="application/javascript"></script>
+  <script src="<%=nc("vendor/jquery-3.0.0.min.js")%>" type="application/javascript"></script>
+  <script src="<%=nc("vendor/jquery-migrate-1.4.1.min.js")%>" type="application/javascript"></script>
 
-  <script src="vendor/ajv.min.js" type="application/javascript" charset="utf-8"></script>
-  <script src="vendor/ace/ace.js" type="application/javascript" charset="utf-8"></script>
-  <script src="vendor/ace/ext-language_tools.js" type="application/javascript" charset="utf-8"></script>
+  <script src="<%=nc("vendor/ajv.min.js")%>" type="application/javascript" charset="utf-8"></script>
+  <script src="<%=nc("vendor/ace/ace.js")%>" type="application/javascript" charset="utf-8"></script>
+  <script src="<%=nc("vendor/ace/ext-language_tools.js")%>" type="application/javascript" charset="utf-8"></script>
 
-  <script src="vendor/raphael-min.js" type="application/javascript"></script>
-  <script src="vendor/raphael.pan-zoom.min.js" type="application/javascript"></script>
+  <script src="<%=nc("vendor/raphael-min.js")%>" type="application/javascript"></script>
+  <script src="<%=nc("vendor/raphael.pan-zoom.min.js")%>" type="application/javascript"></script>
 
-  <script src="vendor/musical.min.js" type="application/javascript"></script>
+  <script src="<%=nc("vendor/musical.min.js")%>" type="application/javascript"></script>
 
-  <script src="vendor/jqconsole.min.js" type="application/javascript"></script>
-  <script src="vendor/json_parse.js" type="application/javascript"></script><!-- to get better error messages -->
+  <script src="<%=nc("vendor/jqconsole.min.js")%>" type="application/javascript"></script>
+  <script src="<%=nc("vendor/json_parse.js")%>" type="application/javascript"></script><!-- to get better error messages -->
 
-  <!-- <script src="vendor/opal.min.js" type="application/javascript"></script>-->
-  <script src="vendor/jspdf.min.js" type="application/javascript"></script>
-  <script src="vendor/filesaver.js" type="application/javascript"></script>
-  <script src="vendor/jszip.min.js" type="application/javascript"></script>
-  <script src="vendor/Dropbox-sdk.min.js" type="application/javascript"></script>
+  <!-- <script src="<%=nc("vendor/opal.min.js")%>" type="application/javascript"></script>-->
+  <script src="<%=nc("vendor/jspdf.min.js")%>" type="application/javascript"></script>
+  <script src="<%=nc("vendor/filesaver.js")%>" type="application/javascript"></script>
+  <script src="<%=nc("vendor/jszip.min.js")%>" type="application/javascript"></script>
+  <script src="<%=nc("vendor/Dropbox-sdk.min.js")%>" type="application/javascript"></script>
 
-  <script src="vendor/abc2svg-1.js" type="application/javascript"></script>
-  <script src="vendor/xml2abc-bw.js" type="application/javascript"></script>
+  <script src="<%=nc("vendor/abc2svg-1.js")%>" type="application/javascript"></script>
+  <script src="<%=nc("vendor/xml2abc-bw.js")%>" type="application/javascript"></script>
 
 
-  <link rel="stylesheet" type="text/css" href="vendor/w2ui/dist/w2ui.min.css"/>
-  <link rel="stylesheet" type="text/css" href="vendor/font-awesome/css/font-awesome.min.css"/>
-  <link rel="stylesheet" type="text/css" href="public/index.css"/>
+  <link rel="stylesheet" type="text/css" href="<%=nc("vendor/w2ui/dist/w2ui.min.css")%>"/>
+  <link rel="stylesheet" type="text/css" href="<%=nc("vendor/font-awesome/css/font-awesome.min.css")%>"/>
+  <link rel="stylesheet" type="text/css" href="<%=nc("public/index.css")%>"/>
 
-  <script type="text/javascript" src="vendor/w2ui/dist/w2ui.min.js"></script>
+  <script type="text/javascript" src="<%=nc("vendor/w2ui/dist/w2ui.min.js")%>"></script>
 
   <style>
     .spinner {
