#87 now everything renders well

--- a/30_sources/SRC_Zupfnoter/public/index.css
+++ b/30_sources/SRC_Zupfnoter/public/index.css
@@ -220,3 +220,6 @@ rect.highlight {
 
 #tunePreview text, #tunePreview path {
   pointer-events: none; }
+
+#harpPreview .znunhighlight {
+  stroke: #000000; }
