#87 initial integration of svg.js

--- a/30_sources/SRC_Zupfnoter/index_opal.html.erb
+++ b/30_sources/SRC_Zupfnoter/index_opal.html.erb
@@ -21,6 +21,9 @@
   <script src="<%=nc("vendor/ace/ace.js")%>" type="application/javascript" charset="utf-8"></script>
   <script src="<%=nc("vendor/ace/ext-language_tools.js")%>" type="application/javascript" charset="utf-8"></script>
 
+  <script src="<%=nc("vendor/svg.min.js")%>" type="application/javascript"></script>
+  <script src="<%=nc("vendor/svg.draggable.min.js")%>" type="application/javascript"></script>
+
   <script src="<%=nc("vendor/musical.min.js")%>" type="application/javascript"></script>
 
   <script src="<%=nc("vendor/jqconsole.min.js")%>" type="application/javascript"></script>
