wip (+1 squashed commit) Squashed commits: [becb283] tuplet path can can now be sculptured by drag & drop (#138)

--- a/30_sources/SRC_Zupfnoter/public/index.css
+++ b/30_sources/SRC_Zupfnoter/public/index.css
@@ -181,6 +181,12 @@ rect.abcref {
 rect.abcref:hover {
   fill-opacity: 0.5; }
 
+.zncontrol {
+  opacity: 0.1; }
+
+.zncontrol:hover, .zncontrol:active {
+  opacity: 0.5; }
+
 rect.highlight {
   fill: red;
   fill-opacity: 0.2; }
