#135 fix toggle of save button; bug was introduced in commit 85fbce8

--- a/30_sources/SRC_Zupfnoter/public/index.css
+++ b/30_sources/SRC_Zupfnoter/public/index.css
@@ -215,6 +215,9 @@ rect.highlight {
     margin-left: 4em;
     list-style: square outside; }
 
+.w2ui-button .alert {
+  background-color: #ff898b; }
+
 #statusbar-layout .w2ui-tb-caption {
   vertical-align: top; }
 
