--- a/30_sources/SRC_Zupfnoter/public/index.scss
+++ b/30_sources/SRC_Zupfnoter/public/index.scss
@@ -305,6 +305,10 @@ rect.highlight {
   }
 }
 
+.w2ui-button .alert{
+  background-color: #ff898b;
+}
+
 #statusbar-layout .w2ui-tb-caption {
   vertical-align: top;
 }
