#135 Save-button now disables while saving enables after everything is done
also committed UD - file which was recreated by a previous build

--- a/30_sources/SRC_Zupfnoter/public/index.css
+++ b/30_sources/SRC_Zupfnoter/public/index.css
@@ -218,6 +218,9 @@ rect.highlight {
 .w2ui-button .alert {
   background-color: #ff898b; }
 
+.w2ui-button .active {
+  background-color: #ffedf2; }
+
 #statusbar-layout .w2ui-tb-caption {
   vertical-align: top; }
 
