--- a/30_sources/SRC_Zupfnoter/public/index.scss
+++ b/30_sources/SRC_Zupfnoter/public/index.scss
@@ -309,6 +309,10 @@ rect.highlight {
   background-color: #ff898b;
 }
 
+.w2ui-button .active{
+  background-color: #ffedf2;
+}
+
 #statusbar-layout .w2ui-tb-caption {
   vertical-align: top;
 }
