see #177 Added File Menu and about box

--- a/30_sources/SRC_Zupfnoter/index_opal.html.erb
+++ b/30_sources/SRC_Zupfnoter/index_opal.html.erb
@@ -59,6 +59,7 @@
 </div>
 <div id="statusbar-layout" style="height:25px">
 </div>
+<input id="file_input" style="display:none;" type="file" accept=".abc, .mxl, .xml"/>
 
 <%= begin
       result = javascript_include_analytics()
@@ -67,7 +68,6 @@
     end
     result
 %>
-
 
 </body>
 </html>
